--- a/MobileTestProject/Base.lproj/Main.storyboard
+++ b/MobileTestProject/Base.lproj/Main.storyboard
@@ -1201,7 +1201,7 @@
                                                                         <state key="normal" image="unselected.png"/>
                                                                         <state key="selected" image="selected.png"/>
                                                                         <connections>
-                                                                            <action selector="notCleanedButtonWithSender:" destination="HNF-Ku-3nz" eventType="touchUpInside" id="8g4-Ki-xCH"/>
+                                                                            <action selector="needMaintainceButtonActionWithSender:" destination="HNF-Ku-3nz" eventType="touchUpInside" id="2th-88-3un"/>
                                                                         </connections>
                                                                     </button>
                                                                 </subviews>
@@ -1671,22 +1671,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1242X2208.png" translatesAutoresizingMaskIntoConstraints="NO" id="gWW-7a-5sZ">
-                                <rect key="frame" x="0.0" y="1" width="667" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="667" height="667"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="gpw-C4-lbb">
                                 <rect key="frame" x="233" y="20" width="202" height="97"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="97" id="RUR-55-boT"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="202" id="cDM-9B-luR"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="97" id="es0-MJ-26N"/>
                                     <constraint firstAttribute="width" constant="202" id="qil-Jf-33T"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bi8-dm-bY2">
-                                <rect key="frame" x="0.0" y="226" width="667" height="86"/>
+                                <rect key="frame" x="0.0" y="147" width="667" height="183"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hUz-aL-Knc">
-                                        <rect key="frame" x="269" y="28" width="128" height="30"/>
+                                        <rect key="frame" x="269" y="123" width="128" height="30"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="128" id="B85-to-Z89"/>
+                                            <constraint firstAttribute="height" constant="30" id="6cM-zc-JiR"/>
+                                            <constraint firstAttribute="width" constant="128" id="ijw-yK-ER9"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="MyriadPro-Regular" family="Myriad Pro" pointSize="16"/>
                                         <state key="normal" title="NEXT" backgroundImage="button.png">
@@ -1697,7 +1700,10 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L31-bv-mD9">
-                                        <rect key="frame" x="43" y="-62" width="579" height="62"/>
+                                        <rect key="frame" x="43" y="5" width="579" height="98"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="98" id="RDO-XE-9zo"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" name="Arial-ItalicMT" family="Arial" pointSize="17"/>
                                         <color key="textColor" red="0.60830616950000005" green="0.41852188109999999" blue="0.1489035189" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -1705,28 +1711,30 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="hUz-aL-Knc" firstAttribute="centerX" secondItem="Bi8-dm-bY2" secondAttribute="centerX" id="7YN-ls-lAC"/>
-                                    <constraint firstItem="hUz-aL-Knc" firstAttribute="top" secondItem="L31-bv-mD9" secondAttribute="bottom" constant="28" id="RKo-18-dfv"/>
-                                    <constraint firstItem="L31-bv-mD9" firstAttribute="top" secondItem="Bi8-dm-bY2" secondAttribute="top" constant="-62" id="U4f-MK-Cwv"/>
-                                    <constraint firstItem="L31-bv-mD9" firstAttribute="centerX" secondItem="hUz-aL-Knc" secondAttribute="centerX" id="eyB-pg-dTU"/>
-                                    <constraint firstItem="L31-bv-mD9" firstAttribute="leading" secondItem="Bi8-dm-bY2" secondAttribute="leading" constant="43" id="nHp-PS-EAn"/>
-                                    <constraint firstAttribute="bottom" secondItem="hUz-aL-Knc" secondAttribute="bottom" constant="28" id="sIU-wQ-IFf"/>
-                                    <constraint firstItem="hUz-aL-Knc" firstAttribute="centerY" secondItem="Bi8-dm-bY2" secondAttribute="centerY" id="xqU-ZG-UTU"/>
+                                    <constraint firstAttribute="height" constant="183" id="5yY-64-XhN"/>
+                                    <constraint firstItem="L31-bv-mD9" firstAttribute="leading" secondItem="Bi8-dm-bY2" secondAttribute="leading" constant="43" id="Grc-lT-sNb"/>
+                                    <constraint firstItem="hUz-aL-Knc" firstAttribute="top" secondItem="L31-bv-mD9" secondAttribute="bottom" constant="20" id="Iom-p4-LeR"/>
+                                    <constraint firstAttribute="trailing" secondItem="L31-bv-mD9" secondAttribute="trailing" constant="45" id="Zgc-ap-Caj"/>
+                                    <constraint firstItem="hUz-aL-Knc" firstAttribute="centerX" secondItem="Bi8-dm-bY2" secondAttribute="centerX" id="dZU-RF-37T"/>
+                                    <constraint firstItem="L31-bv-mD9" firstAttribute="top" secondItem="Bi8-dm-bY2" secondAttribute="top" constant="5" id="xOa-tl-oHu"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="gWW-7a-5sZ" firstAttribute="top" secondItem="21z-bl-orw" secondAttribute="topMargin" constant="-19" id="1PX-uL-Uu9"/>
-                            <constraint firstItem="Bi8-dm-bY2" firstAttribute="leading" secondItem="21z-bl-orw" secondAttribute="leading" id="CJQ-2s-Ppw"/>
-                            <constraint firstItem="Bi8-dm-bY2" firstAttribute="top" secondItem="21z-bl-orw" secondAttribute="top" constant="226" id="DEu-qV-RtH"/>
-                            <constraint firstItem="gWW-7a-5sZ" firstAttribute="leading" secondItem="Bi8-dm-bY2" secondAttribute="leading" id="N81-13-uDa"/>
-                            <constraint firstItem="T4Z-m4-LTs" firstAttribute="top" secondItem="Bi8-dm-bY2" secondAttribute="bottom" constant="355" id="RsI-0y-rxb"/>
-                            <constraint firstItem="gWW-7a-5sZ" firstAttribute="trailing" secondItem="Bi8-dm-bY2" secondAttribute="trailing" id="StS-A0-7id"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="gWW-7a-5sZ" secondAttribute="bottom" constant="-1" id="g7D-uJ-zbi"/>
+                            <constraint firstItem="gpw-C4-lbb" firstAttribute="top" secondItem="bWC-g9-DAF" secondAttribute="bottom" id="02J-Lt-kMh"/>
+                            <constraint firstItem="gWW-7a-5sZ" firstAttribute="top" secondItem="21z-bl-orw" secondAttribute="topMargin" constant="-20" id="1PX-uL-Uu9"/>
+                            <constraint firstAttribute="trailing" secondItem="gWW-7a-5sZ" secondAttribute="trailing" id="2J4-mX-U9R"/>
+                            <constraint firstAttribute="bottom" secondItem="gWW-7a-5sZ" secondAttribute="bottom" id="2ye-W2-sSd"/>
+                            <constraint firstItem="gpw-C4-lbb" firstAttribute="centerX" secondItem="21z-bl-orw" secondAttribute="centerX" id="AxN-h2-oGo"/>
+                            <constraint firstItem="gWW-7a-5sZ" firstAttribute="top" secondItem="21z-bl-orw" secondAttribute="top" id="DFD-SJ-pUU"/>
+                            <constraint firstItem="Bi8-dm-bY2" firstAttribute="leading" secondItem="21z-bl-orw" secondAttribute="leading" id="Kzn-b7-y8W"/>
+                            <constraint firstAttribute="trailing" secondItem="Bi8-dm-bY2" secondAttribute="trailing" id="TNV-85-pvP"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="gWW-7a-5sZ" secondAttribute="bottom" id="g7D-uJ-zbi"/>
+                            <constraint firstItem="Bi8-dm-bY2" firstAttribute="top" secondItem="gpw-C4-lbb" secondAttribute="bottom" constant="30" id="hdy-fA-Pcx"/>
                             <constraint firstItem="gpw-C4-lbb" firstAttribute="top" secondItem="bWC-g9-DAF" secondAttribute="bottom" id="k4h-0I-HB5"/>
-                            <constraint firstAttribute="trailing" secondItem="Bi8-dm-bY2" secondAttribute="trailing" id="lqL-D0-Bxv"/>
-                            <constraint firstItem="gpw-C4-lbb" firstAttribute="centerX" secondItem="Bi8-dm-bY2" secondAttribute="centerX" id="zM1-pE-83i"/>
+                            <constraint firstItem="Bi8-dm-bY2" firstAttribute="top" secondItem="gpw-C4-lbb" secondAttribute="bottom" constant="30" id="liU-S4-JEj"/>
+                            <constraint firstItem="gWW-7a-5sZ" firstAttribute="leading" secondItem="21z-bl-orw" secondAttribute="leading" id="yEN-8p-7FC"/>
                         </constraints>
                     </view>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -1754,8 +1762,8 @@
         <image name="yellow_line.png" width="492" height="5"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="tBb-CL-XHt"/>
-        <segue reference="yZd-tK-ahe"/>
-        <segue reference="emD-00-vey"/>
+        <segue reference="fia-YR-n8M"/>
+        <segue reference="OSE-Sl-mvF"/>
+        <segue reference="lcs-YG-NIe"/>
     </inferredMetricsTieBreakers>
 </document>
